# CashLegacy

./: .gitignore  CMakeLists.txt  Makefile  README.md  arguments.h  builtins.h  cash.cpp  classic_parser.h  classic_processor.h  integer_value.h  parser.h  platform.h  processor.h  rec.cash  singlefile.cpp  state.h  test.cash  unix_native_platform.h  windows_native_platform.h
_bin/: cash_unix
_tests/: ext.cash  rec.cash  syn.cash
builtins/: display.h  general.h  numeric.h  shorthands.h  values.h
sources/: CMakeLists.txt  config.hpp.in  main.cpp
sources/main/: CMakeLists.txt  helpers.hpp  main.cpp
sources/main/parsing/: parser.cpp
sources/main/processing/: launcher.hpp
sources/main/processing/unix/: output_file.cpp
sources/main/processing/windows/: input_file.cpp  output_file.cpp  output_file.hpp
sources/main/terminals/: keys.hpp  provider.hpp  vt100_reader.cpp
sources/main/terminals/unix/: features.cpp
sources/main/terminals/windows/: features.cpp  features.hpp
sources/main/unix/: helpers.hpp
sources/parsing/: parser.hpp
sources/processing/: tasks.hpp
sources/processing/unix/: input_file.cpp  input_file.hpp  output_file.hpp  process.cpp  process.hpp  tasks.hpp
sources/processing/windows/: input_file.hpp  process.cpp  process.hpp  tasks.hpp
sources/terminals/: keys.hpp  provider.cpp  vt100.cpp  vt100.hpp  vt100_reader.hpp
sources/terminals/unix/: features.hpp
sources/terminals/windows/: features.cpp
sources/windows/: helpers.hpp
tests/: a.txt  b.txt  lam.cash  syn.cash
values/: code_value.h  float_value.h  int_value.h  integer_value.h  string_value.h  value.h
